--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
     runtimeOnly 'mysql:mysql-connector-java'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     annotationProcessor 'org.projectlombok:lombok'
