--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-
 project.jwt.secret=EveryAgileSecretKey@$&
+
+
+spring.datasource.url=jdbc:mysql://everyagiledb.cmsdinjpohaf.ap-northeast-2.rds.amazonaws.com:3306/everyagileDB
+spring.datasource.username=everyagile
+spring.datasource.password=everyagile
+spring.jpa.hibernate.ddl-auto=update
